@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(NNdataSummary)
 export(add2csv)
 export(cc)
 export(clearNN)
